using mat-optgroup for group labels

--- a/libs/ui/src/lib/static-autocomplete/group/group.component.scss
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.scss
@@ -24,6 +24,7 @@ input {
 
 .group {
   display: flex;
+  font-weight: bold;
   mat-checkbox {
     flex: 1;
   }
@@ -37,7 +38,7 @@ input {
   display: none;
 }
 
-// prevents the expand icons from not being centered
-.mat-option .mat-icon {
-  margin: 0;
+// hack to overwrite material style which prevented centered icon
+#centered {
+  margin-right: 0;
 }
