--- a/libs/ui/src/lib/static-autocomplete/group/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.html
@@ -26,22 +26,22 @@
       </button>
     </header>
     <ng-container *ngFor="let group of groups">
-      <div [ngClass]="{ hidden: !selectable[group.label] }" class="mat-option group">
-        <mat-checkbox
-          color="primary"
-          [indeterminate]="indeterminate[group.label]"
-          [checked]="checked[group.label]"
-          (change)="checkGroup(group.label, selectable, $event.checked)"
-          [attr.test-id]="group.label"
-          >{{ group.label }}
-        </mat-checkbox>
-        <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
-          <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'"></mat-icon>
-        </button>
-        <mat-divider></mat-divider>
-      </div>
-      <ng-container *ngFor="let item of group.items">
+      <mat-optgroup [ngClass]="{ hidden: !selectable[group.label] }">
+        <div ngClass="group">
+          <mat-checkbox
+            color="primary"
+            [indeterminate]="indeterminate[group.label]"
+            [checked]="checked[group.label]"
+            (change)="checkGroup(group.label, selectable, $event.checked)"
+            [attr.test-id]="group.label"
+            >{{ group.label }}
+          </mat-checkbox>
+          <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
+            <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'" id="centered"></mat-icon>
+          </button>
+        </div>
         <mat-option
+          *ngFor="let item of group.items"
           [value]="item"
           class="item"
           [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
@@ -49,7 +49,7 @@
         >
           {{ item | toLabel: scope }}
         </mat-option>
-      </ng-container>
+      </mat-optgroup>
     </ng-container>
   </mat-select>
   <mat-error *ngIf="control.hasError('required')"> This field is mandatory </mat-error>
