--- a/libs/ui/src/lib/static-autocomplete/group/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.html
@@ -25,32 +25,30 @@
         <mat-icon svgIcon="refresh"></mat-icon>
       </button>
     </header>
-    <ng-container *ngFor="let group of groups">
-      <mat-optgroup [ngClass]="{ hidden: !selectable[group.label] }">
-        <div ngClass="group">
-          <mat-checkbox
-            color="primary"
-            [indeterminate]="indeterminate[group.label]"
-            [checked]="checked[group.label]"
-            (change)="checkGroup(group.label, selectable, $event.checked)"
-            [attr.test-id]="group.label"
-            >{{ group.label }}
-          </mat-checkbox>
-          <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
-            <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'" id="centered"></mat-icon>
-          </button>
-        </div>
-        <mat-option
-          *ngFor="let item of group.items"
-          [value]="item"
-          class="item"
-          [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
-          [attr.test-id]="item"
-        >
-          {{ item | toLabel: scope }}
-        </mat-option>
-      </mat-optgroup>
-    </ng-container>
+    <mat-optgroup *ngFor="let group of groups" [ngClass]="{ hidden: !selectable[group.label] }">
+      <div ngClass="group">
+        <mat-checkbox
+          color="primary"
+          [indeterminate]="indeterminate[group.label]"
+          [checked]="checked[group.label]"
+          (change)="checkGroup(group.label, selectable, $event.checked)"
+          [attr.test-id]="group.label"
+          >{{ group.label }}
+        </mat-checkbox>
+        <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
+          <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'" id="centered"></mat-icon>
+        </button>
+      </div>
+      <mat-option
+        *ngFor="let item of group.items"
+        [value]="item"
+        class="item"
+        [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
+        [attr.test-id]="item"
+      >
+        {{ item | toLabel: scope }}
+      </mat-option>
+    </mat-optgroup>
   </mat-select>
   <mat-error *ngIf="control.hasError('required')"> This field is mandatory </mat-error>
 </mat-form-field>
