pasting feature in search input - issue 9375

--- a/libs/ui/src/lib/static-autocomplete/group/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.html
@@ -16,6 +16,7 @@
       <input
         [placeholder]="filterPlaceholder"
         [formControl]="search"
+        (paste)="onSearchPaste($event)"
         (keydown)="$event.stopPropagation()"
         #searchInput
         test-id="search-input-control"
