--- a/libs/ui/src/lib/static-autocomplete/group/group.component.html
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.html
@@ -1,55 +1,67 @@
-<mat-form-field appearance="outline" [attr.test-id]="scope">
-  <mat-label>{{ label }}</mat-label>
-  <mat-icon *ngIf="selectIcon !== 'none'" matPrefix [svgIcon]="selectIcon"></mat-icon>
-  <mat-select #mySelect multiple [formControl]="control" (openedChange)="onOpen()" [required]="required" test-id="filter-select">
-    <mat-select-trigger>{{
-      control.value.length === items.length ? displayAll : (control.value | toGroupLabel: scope | join)
-    }}</mat-select-trigger>
-    <header>
-      <mat-checkbox
-        color="primary"
-        [indeterminate]="indeterminate.all"
-        [checked]="checked.all"
-        (change)="checkAll($event.checked)"
-        test-id="checked-all"
-      ></mat-checkbox>
-      <input
-        [placeholder]="filterPlaceholder"
-        [formControl]="search"
-        (paste)="onSearchPaste($event)"
-        (keydown)="$event.stopPropagation()"
-        #searchInput
-        test-id="search-input-control"
-      />
-      <mat-icon *ngIf="!search.value" svgIcon="search"></mat-icon>
-      <button *ngIf="!!search.value" mat-icon-button type="button" (click)="resetSearch()" matTooltip="Clear text">
-        <mat-icon svgIcon="refresh"></mat-icon>
-      </button>
-    </header>
-    <mat-optgroup *ngFor="let group of groups" [ngClass]="{ hidden: !selectable[group.label] }">
-      <div ngClass="group">
+<section>
+  <mat-form-field appearance="outline" [attr.test-id]="scope">
+    <mat-label>{{ label }}</mat-label>
+    <mat-icon *ngIf="selectIcon !== 'none'" matPrefix [svgIcon]="selectIcon"></mat-icon>
+    <mat-select
+      #mySelect
+      multiple
+      [formControl]="control"
+      (openedChange)="onOpen()"
+      [required]="required"
+      test-id="filter-select"
+    >
+      <mat-select-trigger>{{
+        control.value.length === items.length ? displayAll : (control.value | toGroupLabel: scope | join)
+      }}</mat-select-trigger>
+      <header>
         <mat-checkbox
           color="primary"
-          [indeterminate]="indeterminate[group.label]"
-          [checked]="checked[group.label]"
-          (change)="checkGroup(group.label, selectable, $event.checked)"
-          [attr.test-id]="group.label"
-          >{{ group.label }}
-        </mat-checkbox>
-        <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
-          <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'" id="centered"></mat-icon>
+          [indeterminate]="indeterminate.all"
+          [checked]="checked.all"
+          (change)="checkAll($event.checked)"
+          test-id="checked-all"
+        ></mat-checkbox>
+        <input
+          [placeholder]="filterPlaceholder"
+          [formControl]="search"
+          (paste)="onSearchPaste($event)"
+          (keydown)="$event.stopPropagation()"
+          #searchInput
+          test-id="search-input-control"
+        />
+        <mat-icon *ngIf="!search.value" svgIcon="search"></mat-icon>
+        <button *ngIf="!!search.value" mat-icon-button type="button" (click)="resetSearch()" matTooltip="Clear text">
+          <mat-icon svgIcon="refresh"></mat-icon>
         </button>
-      </div>
-      <mat-option
-        *ngFor="let item of group.items"
-        [value]="item"
-        class="item"
-        [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
-        [attr.test-id]="item"
-      >
-        {{ item | toLabel: scope }}
-      </mat-option>
-    </mat-optgroup>
-  </mat-select>
-  <mat-error *ngIf="control.hasError('required')"> This field is mandatory </mat-error>
-</mat-form-field>
+      </header>
+      <mat-optgroup *ngFor="let group of groups" [ngClass]="{ hidden: !selectable[group.label] }">
+        <div ngClass="group">
+          <mat-checkbox
+            color="primary"
+            [indeterminate]="indeterminate[group.label]"
+            [checked]="checked[group.label]"
+            (change)="checkGroup(group.label, selectable, $event.checked)"
+            [attr.test-id]="group.label"
+            >{{ group.label }}
+          </mat-checkbox>
+          <button mat-icon-button color="primary" (click)="toggleVisibility(group.label)">
+            <mat-icon [svgIcon]="visible[group.label] ? 'expand_more' : 'expand_less'" id="centered"></mat-icon>
+          </button>
+        </div>
+        <mat-option
+          *ngFor="let item of group.items"
+          [value]="item"
+          class="item"
+          [ngClass]="{ hidden: !selectable[item] || visible[group.label] }"
+          [attr.test-id]="item"
+        >
+          {{ item | toLabel: scope }}
+        </mat-option>
+      </mat-optgroup>
+    </mat-select>
+    <mat-error *ngIf="control.hasError('required')"> This field is mandatory </mat-error>
+  </mat-form-field>
+  <button *ngIf="control.value.length" mat-icon-button type="button" matTooltip="See list" (click)="openGroupModal()">
+    <mat-icon svgIcon="document"></mat-icon>
+  </button>
+</section>
