--- a/libs/ui/src/lib/static-autocomplete/group/group.component.scss
+++ b/libs/ui/src/lib/static-autocomplete/group/group.component.scss
@@ -1,3 +1,11 @@
+section {
+  display: flex;
+  align-items: baseline;
+  button {
+    margin-left: 8px;
+  }
+}
+
 mat-form-field {
   width: 100%;
 }
