--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -315,6 +315,11 @@
             <price-per-currency [price]="amount"></price-per-currency>
           </ng-container>
         </ng-template>
+        <ng-template colRef="id" label="Action" let-incomeId sticky>
+          <button mat-icon-button (click)="removeIncome(incomeId)">
+            <mat-icon svgIcon="delete" matTooltip="Delete income"></mat-icon>
+          </button>
+        </ng-template>
       </bf-table>
     </mat-tab>
 
