--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -272,6 +272,9 @@
         <ng-template colRef="name" label="Name" let-name sort>
           {{ name }}
         </ng-template>
+        <ng-template colRef="groupId" label="Group" let-groupId sort>
+          {{ groupId ? groupId : '--' }}
+        </ng-template>
         <ng-template colRef="date" label="Date" let-date sort defaultSort>
           {{ date | date: 'MM/dd/yyyy' }}
         </ng-template>
@@ -311,6 +314,11 @@
           <ng-container *ngIf="toPricePerCurrency(item) as amount">
             <price-per-currency [price]="amount"></price-per-currency>
           </ng-container>
+        </ng-template>
+        <ng-template colRef="id" label="Action" let-incomeId sticky>
+          <button mat-icon-button (click)="removeIncome(incomeId)">
+            <mat-icon svgIcon="delete" matTooltip="Delete income"></mat-icon>
+          </button>
         </ng-template>
       </bf-table>
     </mat-tab>
