BF New media #9452

--- a/libs/user/src/lib/auth/forms/preferences/preferences.component.html
+++ b/libs/user/src/lib/auth/forms/preferences/preferences.component.html
@@ -6,7 +6,7 @@
       <static-group
         [formControl]="form.get('medias')"
         scope="medias"
-        [withoutValues]="['Theatrical Rights']"
+        [withoutValues]="waterfallMediaGroups"
         displayAll="All Rights"
         placeholder="Select right(s)">
       </static-group>
