--- a/libs/movie/src/lib/movie/components/request-asking-price/request-asking-price.component.html
+++ b/libs/movie/src/lib/movie/components/request-asking-price/request-asking-price.component.html
@@ -24,7 +24,7 @@
       <static-group
         [formControl]="form.get('medias')"
         scope="medias"
-        [withoutValues]="['Theatrical Rights']"
+        [withoutValues]="waterfallMediaGroups"
         displayAll="All Rights"
         required
         placeholder="Select rights">
