--- a/libs/contract/src/lib/avails/filter/filter.component.html
+++ b/libs/contract/src/lib/avails/filter/filter.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="getControl('territories') as territories">
   <group-multiselect
+    *ngIf="getControl('territories') as territories"
     scope="territories"
     label="Select Territoties"
     displayAll="World"
@@ -7,10 +7,9 @@
     required
     [control]="territories">
   </group-multiselect>
-</ng-container>
 
-<ng-container *ngIf="getControl('medias') as medias">
   <group-multiselect
+    *ngIf="getControl('medias') as medias"
     scope="medias"
     label="Select Rights"
     displayAll="All Rights"
@@ -19,7 +18,6 @@
     required
     [control]="medias">
   </group-multiselect>
-</ng-container>
 
 <div class="duration" *ngIf="getControl('duration') as duration" [formGroup]="duration" >
   <mat-form-field appearance="outline">
