--- a/libs/ui/src/lib/global-modal/global-modal.component.html
+++ b/libs/ui/src/lib/global-modal/global-modal.component.html
@@ -1,6 +1,6 @@
 <section [class]="data.size" test-id="modal">
   <button mat-icon-button (click)="close()">
-    <mat-icon svgIcon="close"></mat-icon>
+    <mat-icon svgIcon="close" test-id="close"></mat-icon>
   </button>
   
   <mat-dialog-content class="mat-dialog-content" fxLayout="column">
