--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -100,6 +100,9 @@
           </ng-template>
           <ng-template colRef="blockId" label="Block" let-blockId sort>
             {{ getBlockName(blockId) }}
+            <button mat-icon-button [cdkCopyToClipboard]="blockId" (click)="$event.stopPropagation()">
+              <mat-icon svgIcon="file_copy"></mat-icon>
+            </button>
           </ng-template>
           <ng-template colRef="name" label="Type" let-name sort>
             {{ name }}
@@ -261,6 +264,12 @@
 
     <!-- RIGHTS -->
     <mat-tab label="3 - Rights">
+      <section class="actions">
+        <button mat-stroked-button color="primary" (click)="removeRights(rights)">
+          <mat-icon svgIcon="delete"></mat-icon>
+          <span>Remove all rights</span>
+        </button>
+      </section>
       <bf-table [source]="rights" clickable useFilter pagination="50">
         <ng-template colRef="id" label="Id" let-id sort>
           {{ id }}
@@ -286,8 +295,8 @@
         <ng-template colRef="conditions" label="Conditions" let-conditions>
           {{ conditions?.conditions?.length ? conditions.conditions.length  : '--' }}
         </ng-template>
-        <ng-template colRef="id" label="Actions" let-rightId sticky>
-          <button mat-icon-button (click)="removeRight(rightId)">
+        <ng-template colRef="" label="Actions" let-right sticky>
+          <button mat-icon-button (click)="removeRights([right])">
             <mat-icon svgIcon="delete" matTooltip="Delete right"></mat-icon>
           </button>
         </ng-template>
@@ -296,6 +305,12 @@
 
     <!-- INCOMES -->
     <mat-tab label="4 - Incomes">
+      <section class="actions">
+        <button mat-stroked-button color="primary" (click)="removeIncomes(incomes)">
+          <mat-icon svgIcon="delete"></mat-icon>
+          <span>Remove all incomes</span>
+        </button>
+      </section>
       <bf-table [source]="incomes" clickable useFilter pagination="50">
         <ng-template colRef="id" label="Id" let-id sort>
           {{ id }}
@@ -314,8 +329,8 @@
             <price-per-currency [price]="amount"></price-per-currency>
           </ng-container>
         </ng-template>
-        <ng-template colRef="id" label="Action" let-incomeId sticky>
-          <button mat-icon-button (click)="removeIncome(incomeId)">
+        <ng-template colRef="" label="Action" let-income sticky>
+          <button mat-icon-button (click)="removeIncomes([income])">
             <mat-icon svgIcon="delete" matTooltip="Delete income"></mat-icon>
           </button>
         </ng-template>
