--- a/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
+++ b/apps/crm/crm/src/app/crm/pages/waterfall/waterfall.component.html
@@ -109,6 +109,9 @@
           </ng-template>
           <ng-template colRef="payload.id" label="Id" let-id>
             {{ id ? id : '--' }}
+            <button *ngIf="id" mat-icon-button [cdkCopyToClipboard]="id" (click)="$event.stopPropagation()">
+              <mat-icon svgIcon="file_copy"></mat-icon>
+            </button>
           </ng-template>
           <ng-template colRef="payload.orgId" label="Rightholder" let-orgId>
             {{ orgId ? getRightholderName(orgId) : '--' }}
@@ -273,6 +276,9 @@
       <bf-table [source]="rights" clickable useFilter pagination="50">
         <ng-template colRef="id" label="Id" let-id sort>
           {{ id }}
+          <button mat-icon-button [cdkCopyToClipboard]="id" (click)="$event.stopPropagation()">
+            <mat-icon svgIcon="file_copy"></mat-icon>
+          </button>
         </ng-template>
         <ng-template colRef="name" label="Name" let-name sort>
           {{ name }}
